--- a/Code/Python API/requirements.txt
+++ b/Code/Python API/requirements.txt
@@ -1,9 +1,33 @@
-beautifulsoup4==4.8.2
-Flask==1.1.1
+attrs==19.3.0
+Automat==20.2.0
+beautifulsoup4==4.9.0
+bs4==0.0.1
+certifi==2020.4.5.1
+Flask==1.1.2
+futures3==1.0.0
+get==2019.4.13
 gunicorn==20.0.4
 html5lib==1.0.1
-lxml==4.4.2
-requests==2.22.0
+hyperlink==19.0.0
+idna==2.9
+incremental==17.5.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jsonify==0.5
+lxml==4.5.0
+MarkupSafe==1.1.1
+post==2019.4.13
+Protego==0.1.16
+public==2019.4.13
+pycparser==2.20
+PyDispatcher==2.0.5
+PyHamcrest==2.0.2
+query-string==2019.4.13
+request==2019.4.13
+requests==2.23.0
 retrying==1.3.3
-soupsieve==1.9.5
-urllib3==1.25.7
+six==1.14.0
+soupsieve==2.0
+urllib3==1.25.9
+webencodings==0.5.1
+Werkzeug==1.0.1
