--- a/Code/Hazir-App/pubspec.yaml
+++ b/Code/Hazir-App/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flare_splash_screen: ^3.0.1
   flutter_calendar_carousel: ^1.4.11
   flutter_local_notifications: ^1.4.1
+  workmanager: ^0.2.0
 
 
 
