pull to refresh functionality adde along with statemanagement features

--- a/Code/Hazir-App/pubspec.yaml
+++ b/Code/Hazir-App/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   flare_splash_screen: ^3.0.1
   flutter_calendar_carousel: ^1.4.11
   flutter_local_notifications: ^1.4.1
-  workmanager: ^0.2.0
   firebase_database: ^3.1.5
   cloud_firestore: ^0.13.5
+  firebase_messaging: ^6.0.15
+  provider: ^4.1.2
+  pull_to_refresh: ^1.5.7
 
 
 
