--- a/Code/Hazir-App/pubspec.yaml
+++ b/Code/Hazir-App/pubspec.yaml
@@ -28,12 +28,11 @@ dependencies:
   animated_text_kit: ^2.0.0
   http: ^0.12.0+4
   modal_progress_hud: ^0.1.3
-  fluttertoast: ^3.1.3
+  fluttertoast: ^4.0.1
   flare_flutter: ^2.0.1
   shared_preferences: ^0.5.6+3
   intl: ^0.16.1
   flare_splash_screen: ^3.0.1
-  flutter_calendar_carousel: ^1.4.11
   flutter_local_notifications: ^1.4.1
   firebase_database: ^3.1.5
   cloud_firestore: ^0.13.5
@@ -41,6 +40,7 @@ dependencies:
   provider: ^4.1.2
   pull_to_refresh: ^1.5.7
   shimmer: ^1.1.1
+  settings_ui: ^0.3.0
 
 
 
