--- a/Code/Hazir-App/pubspec.yaml
+++ b/Code/Hazir-App/pubspec.yaml
@@ -47,8 +47,14 @@ dependencies:
 
 
 dev_dependencies:
+  flutter_launcher_icons:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: 'assets/app_icon.png'
+  android: true
+  ios: true
 
 
 # For information on the generic Dart part of this file, see the
